--- a/connororton.html
+++ b/connororton.html
@@ -42,13 +42,13 @@
       </div>
       <div class="row">
         <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
-        <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
-        <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
+        <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
+        <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
       </div>
       <div class="row">
-        <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="https://github.com/connor1994">GitHub Portfolio</a></div>
-        <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
-        <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
+        <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://github.com/connor1994">GitHub Portfolio</a></div>
+        <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
+        <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
       </div>
     </div>
   </div>
@@ -98,7 +98,7 @@
       </div>
       <div class="row mx-auto pb-2">
         <div class="col-md-4"></div>
-        <div class="col-md-4"><a class="btn btn-lg active btn-block py-2 my-2 btn-dark" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Pixel Pinball Arcade</a></div>
+        <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Pixel Pinball Arcade</a></div>
         <div class="col-md-4"></div>
       </div>
       <div class="row">
