--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <h2 class="bg-dark text-center display-4 py-2 mt-2 mx-auto">The Team</h2>
           <div class="col-md-12">
             <div class="row">
-              <div class="col-12 col-lg-6" style=""> <img class="img-fluid d-block mb-3 mx-auto border border-dark" width="350
+              <div class="col-12 col-lg-6" style=""> <img class="img-fluid d-block border border-dark mx-auto" width="350
 400
 350" alt="Card image cap" src="assets/Portrait/Connor_Orton.jpg">
                 <div class="row">
@@ -47,7 +47,7 @@
                 <p class="mb-0 bg-primary px-2 py-2 text-left" style="">Connor is a games programmer and designer. He has been passionate about games production since an early age who started out using RPG Maker XP to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn my-2 btn-block btn-dark p-2" href="connororton.html" style="">Portfolio &amp; CV</a>
               </div>
               <div class="col-12 col-lg-6" style="">
-                <img class="img-fluid d-block mb-3 mx-auto border border-dark" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg" width="350">
+                <img class="img-fluid d-block border border-dark mx-auto" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg" width="350">
                 <div class="row">
                   <div class="col-md-12">
                     <h2 class="bg-dark text-center display-4 py-2 mt-2 mx-auto">Natalie Smith<br></h2>
