--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -21,7 +21,7 @@
   <div class="mb-4" style="">
     <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border mx-auto mt-2" src="assets/Portrait/Natalie_Smith.jpg" height="300" width="300
+        <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border mx-auto mt-2 mb-2" src="assets/Portrait/Natalie_Smith.jpg" height="300" width="300
 400
 50"></div>
       </div>
