--- a/connororton.html
+++ b/connororton.html
@@ -211,7 +211,7 @@
       <div class="row">
         <div class="col-md-12">
           <h3 class="text-center bg-secondary mt-2 p-2" style=""><b>Dash and Stack - Unity, C# (2015)</b></h3>
-          <p class="p-2 text-left bg-primary" style="">Dash and Stack is a complete android game developed in Unity and written in C# designed for older android phones. I developed this project with a friend and it was placed on the google play store for free. I was responsible for designing the game and game modes. I implemented the user interface, audio and writ the menu systems whilst my partner writ the gameplay scripts.<br></p>
+          <p class="p-2 text-left bg-primary" style="">Dash and Stack is a complete android game developed in Unity and written in C# designed for older android phones. I developed this project with a friend and it was placed on the google play store for free. I co-designed the game and game modes. I implemented the user interface art assets and interaction scripts and implemented the audio whilst my friend wrote the various gameplay scripts.<br></p>
         </div>
       </div>
       <div class="row">
