--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -168,22 +168,24 @@
         <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto w-100" src="assets/Portfolio/Natalie/BOTR Sprites/Item_Types_spritesheet.png"> </div>
         <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Navigation_Icons_spritesheet.png"> </div>
       </div>
+      <div class="row">
+        <div class="col-md-12 mt-2">
+          <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 pb-3">
+          <div class="embed-responsive embed-responsive-16by9">
+            <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls"> Your browser does not support HTML5 video. </video>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="container mb-4" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
     <div class="row">
       <div class="col-md-12">
         <div class="row">
-          <div class="col-md-12 mt-2">
-            <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="embed-responsive embed-responsive-16by9">
-              <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls"> Your browser does not support HTML5 video. </video>
-            </div>
-          </div>
         </div>
       </div>
     </div>
