--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -44,7 +44,7 @@
             <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://twitter.com/natsmith1219" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
           </div>
           <div class="row">
-            <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://www.deviantart.com/foxydj">Deviant Art Portfolio<br></a></div>
+            <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://www.behance.net/Missnataliesmith">Digital Art Portfolio (Behance)</a></div>
             <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="assets/CV/Natalie Smith CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
             <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="https://www.pinterest.co.uk/natsmith1219"><i class="fa fa-fw fa-pinterest-p"></i>Crafts Portfolio</a></div>
           </div>
