--- a/index.html
+++ b/index.html
@@ -77,13 +77,41 @@
           <h1 class="bg-dark text-center display-4 py-2 mt-2 mx-auto" style="">Game Projects</h1>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h3 class="bg-secondary text-center p-2 mt-2">Blight of the Rose (Upcoming)</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="mb-0 bg-primary py-2 px-2 text-left">Our next project is a 2D Action Horror sidescroller with a pixel art style set in a populated city in the modern day during a apocalyptic style event. To be released multiplatform. Below is the first development update of the game which features the user interface.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 mt-2">
+          <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
+          <div class="embed-responsive embed-responsive-16by9 mb-2">
+            <iframe src="https://www.youtube.com/embed/TejccNBTFFU" allowfullscreen="" class="embed-responsive-item"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mt-4">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+      <div class="row">
+      </div>
+      <div class="row">
+      </div>
+      <div class="row">
+      </div>
     </div>
   </div>
   <div class="" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="text-center bg-secondary py-2 p-2">Pixel Pinball Arcade</h3>
+          <h3 class="text-center bg-secondary py-2 p-2 mt-2">Pixel Pinball Arcade</h3>
         </div>
       </div>
       <div class="row">
@@ -102,33 +130,7 @@
             </div>
           </div>
           <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item" controls="controls" width="11"> Your browser does not support HTML5 video. </video>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="mt-4" style="">
-    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-      <div class="row">
-        <div class="col-md-12" style="">
-          <h3 class="bg-secondary text-center p-2 mt-2">Blight of the Rose (Upcoming)</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <p class="mb-0 bg-primary py-2 px-2 text-left">Our next project is a 2D Action Horror sidescroller with a pixel art style set in a populated city in the modern day during a apocalyptic style event. To be released multiplatform. Below is the first development update of the game which features the user interface.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 mt-2">
-          <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 pb-2">
-          <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls" width="11"> Your browser does not support HTML5 video. </video>
+            <iframe src="https://www.youtube.com/embed/W731IcgOiAc" allowfullscreen="" class="embed-responsive-item"></iframe>
           </div>
         </div>
       </div>
