--- a/connororton.html
+++ b/connororton.html
@@ -48,7 +48,7 @@
       <div class="row">
         <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://github.com/connor1994">GitHub Portfolio</a></div>
         <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
-        <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
+        <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://sketchfab.com/conn0">3D Portfolio</a></div>
       </div>
     </div>
   </div>
@@ -74,15 +74,10 @@
           <div class="row">
             <div class="col-md-12">
               <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
+              <div class="embed-responsive embed-responsive-16by9 pb-2">
+                <iframe src="https://www.youtube.com/embed/TejccNBTFFU" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
+              </div>
             </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 pb-2">
-          <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls" width="1
-10"> Your browser does not support HTML5 video. </video>
           </div>
         </div>
       </div>
@@ -102,13 +97,8 @@
       <div class="row">
         <div class="col-md-12">
           <h3 class="text-center bg-secondary p-2"><b class="">Gameplay Video</b></h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 pb-2">
-          <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item" controls="controls" width="1
-10"> Your browser does not support HTML5 video. </video>
+          <div class="embed-responsive embed-responsive-16by9 pb-2">
+            <iframe src="https://www.youtube.com/embed/W731IcgOiAc" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
           </div>
         </div>
       </div>
@@ -128,10 +118,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 pb-2">
-          <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Connor/Battle Beasts - RPG Mechanics Asset Pack - Trailer.mp4" class="embed-responsive-item" controls="controls" width="1
-10"> Your browser does not support HTML5 video. </video>
+        <div class="col-md-12">
+          <div class="embed-responsive embed-responsive-16by9 pb-2">
+            <iframe src="https://www.youtube.com/embed/dab3ZMbZwGQ" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
           </div>
         </div>
       </div>
@@ -151,10 +140,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 pb-2">
-          <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Connor/Survival Training Vr.mp4" class="embed-responsive-item" controls="controls" width="1
-10"> Your browser does not support HTML5 video. </video>
+        <div class="col-md-12">
+          <div class="embed-responsive embed-responsive-16by9 pb-2">
+            <iframe src="https://www.youtube.com/embed/AI7nvnnRHm8" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
           </div>
         </div>
       </div>
@@ -174,10 +162,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 pb-2">
-          <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Connor/Isolation Complex - Gameplay.mp4" class="embed-responsive-item" controls="controls" width="1
-10"> Your browser does not support HTML5 video. </video>
+        <div class="col-md-12">
+          <div class="embed-responsive embed-responsive-16by9 pb-2">
+            <iframe src="https://www.youtube.com/embed/Mzi4IWeqC2w" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
           </div>
         </div>
       </div>
@@ -197,10 +184,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 mb-2">
-          <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Connor/Once Upon a Castle - Gameplay.mp4" class="embed-responsive-item" controls="controls" width="1
-10"> Your browser does not support HTML5 video. </video>
+        <div class="col-md-12">
+          <div class="embed-responsive embed-responsive-16by9 pb-2">
+            <iframe src="https://www.youtube.com/embed/edoXf-vOV0Q" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
           </div>
         </div>
       </div>
@@ -220,10 +206,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 mb-2">
-          <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Connor/Dash and Stack.mp4" class="embed-responsive-item" controls="controls" width="1
-10"> Your browser does not support HTML5 video. </video>
+        <div class="col-md-12">
+          <div class="embed-responsive embed-responsive-16by9 pb-2">
+            <iframe src="https://www.youtube.com/embed/wnWKKUCCTAs" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
           </div>
         </div>
       </div>
@@ -243,10 +228,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 pb-2">
-          <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Connor/I Am Alone.mp4" class="embed-responsive-item" controls="controls" width="1
-10"> Your browser does not support HTML5 video. </video>
+        <div class="col-md-12">
+          <div class="embed-responsive embed-responsive-16by9 pb-2">
+            <iframe src="https://www.youtube.com/embed/i3TQLIfgsV8" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
           </div>
         </div>
       </div>
@@ -266,10 +250,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 mb-2">
-          <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Connor/Operation Health.mp4" class="embed-responsive-item" controls="controls" width="1
-10"> Your browser does not support HTML5 video. </video>
+        <div class="col-md-12">
+          <div class="embed-responsive embed-responsive-16by9 pb-2">
+            <iframe src="https://www.youtube.com/embed/vCe63aEdF4I" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
           </div>
         </div>
       </div>
