--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -174,9 +174,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 pb-3">
-          <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls"> Your browser does not support HTML5 video. </video>
+        <div class="col-md-12">
+          <div class="embed-responsive embed-responsive-16by9 pb-2 mb-2">
+            <iframe src="https://www.youtube.com/embed/TejccNBTFFU" allowfullscreen="" class="embed-responsive-item"></iframe>
           </div>
         </div>
       </div>
@@ -238,12 +238,11 @@
             <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_Red_sprite.png" height="200" width="200"> </div>
             <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_Blue_sprite.png" height="200" width="200"></div>
           </div>
-        </div>
-        <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
           <div class="row">
-            <div class="col-md-12 mb-2">
-              <div class="embed-responsive embed-responsive-16by9">
-                <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item" controls="controls"> Your browser does not support HTML5 video. </video>
+            <div class="col-md-12 mt-2">
+              <h3 class="text-center bg-secondary p-2"><b>Gameplay Video</b></h3>
+              <div class="embed-responsive embed-responsive-16by9 pb-2 mb-2">
+                <iframe src="https://www.youtube.com/embed/W731IcgOiAc" allowfullscreen="" class="embed-responsive-item"></iframe>
               </div>
             </div>
           </div>
