--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="bg-dark text-center display-4 py-2 mt-2 mx-auto" style="">Game Projects</h1>
+          <h1 class="bg-dark text-center display-4 py-2 mx-auto mt-2" style="">Game Projects</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3 class="bg-secondary text-center p-2 mt-2">Blight of the Rose (Upcoming)</h3>
+          <h3 class="bg-secondary text-center p-2">Blight of the Rose (Upcoming)</h3>
         </div>
       </div>
       <div class="row">
