--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -191,7 +191,7 @@
     </div>
     <div class="">
       <div class="" style="">
-        <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+        <div class="container px-0" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
           <div class="row">
             <div class="col-md-12" style="">
               <h3 class="text-center bg-secondary mt-2 p-2" style=""><b>Pixel Pinball Arcade - Unity, C# (2020)</b></h3>
@@ -199,7 +199,7 @@
             </div>
           </div>
         </div>
-        <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+        <div class="container px-0" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
           <div class="row">
             <div class="col-md-12 mb-2"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>&nbsp;Pixel Pinball Arcade</a></div>
           </div>
@@ -239,7 +239,7 @@
             <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_Blue_sprite.png" height="200" width="200"></div>
           </div>
           <div class="row">
-            <div class="col-md-12 mt-2">
+            <div class="col-md-12 mt-2 px-0">
               <h3 class="text-center bg-secondary p-2"><b>Gameplay Video</b></h3>
               <div class="embed-responsive embed-responsive-16by9 pb-2 mb-2">
                 <iframe src="https://www.youtube.com/embed/W731IcgOiAc" allowfullscreen="" class="embed-responsive-item"></iframe>
