--- a/CRJ.html
+++ b/CRJ.html
@@ -22,13 +22,13 @@
     <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12 pt-2" style="">
-          <h3 class="text-center bg-dark p-2"><b class="">Connor Orton BSc</b><br></h3>
-          <h5 class="text-center bg-dark p-2">Games Programmer &amp; Designer</h5>
+          <h3 class="text-center bg-dark p-2">Critical Reflective Journal</h3>
+          <h5 class="text-center bg-dark p-2">Introduction</h5>
         </div>
       </div>
       <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">I am a highly motivated and dedicated video game developer whose passions include games programming and design. My interest in games production started at an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have experience with most industry standard game engines and production software. I can read and write in a variety of different programming languages which I've taught myself and I've always had the desire to learn and improve on my skill set. Find my CV and portfolio below that I've developed over the years in my free time and at university.</p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">test</p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
@@ -51,24 +51,7 @@
       <div class="row">
         <div class="col-md-12">
           <h3 class="text-center bg-secondary p-2" style=""><b>Blight of the Rose - (Upcoming) Unity, C#</b></h3>
-          <p class="text-left p-2 bg-primary">Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors.<br><br><b class="">My main responsibilites are:</b><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Lighting and rendering management using Unity's URP<br>- Building and exporting the game<br><br>First development preview below. Disclaimer: Most assets are placeholder and are expected to be changed before project finish.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="row">
-            <div class="col-md-12">
-              <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 pb-2">
-          <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls" width="1
-10"> Your browser does not support HTML5 video. </video>
-          </div>
+          <p class="text-left p-2 bg-primary">-placeholder</p>
         </div>
       </div>
     </div>
