--- a/connororton.html
+++ b/connororton.html
@@ -50,6 +50,9 @@
         <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
         <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://sketchfab.com/conn0">3D Portfolio</a></div>
       </div>
+      <div class="row">
+        <div class="col-md-12"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="CRJ.html">Critical Reflective Journal</a></div>
+      </div>
     </div>
   </div>
   <div class="">
