--- a/CRJ.html
+++ b/CRJ.html
@@ -28,7 +28,7 @@
       </div>
       <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">test</p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">Under Construction for my MA.</p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
@@ -41,7 +41,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto" style=""><b class="text-center">Games Programming Portfolio</b></h3>
+          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto" style=""><b class="text-center">Contents Page</b></h3>
         </div>
       </div>
     </div>
@@ -50,8 +50,8 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center bg-secondary p-2" style=""><b>Blight of the Rose - (Upcoming) Unity, C#</b></h3>
-          <p class="text-left p-2 bg-primary">-placeholder</p>
+          <h3 class="text-center bg-secondary p-2" style=""><b>Under Construction!</b></h3>
+          <p class="text-left p-2 bg-primary">Under Construction for my MA.</p>
         </div>
       </div>
     </div>
