--- a/connororton.html
+++ b/connororton.html
@@ -28,12 +28,12 @@
       <div class="row">
         <div class="col-md-12 pt-2" style="">
           <h3 class="text-center bg-dark p-2"><b class="">Connor Orton BSc</b><br></h3>
-          <h5 class="text-center bg-dark p-2">Games Programmer &amp; Designer</h5>
+          <h5 class="text-center bg-dark p-2">Games Programmer</h5>
         </div>
       </div>
       <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">I am a highly motivated and dedicated video game developer whose passions include games programming and design. My interest in games production started at an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have experience with most industry standard game engines and production software. I can read and write in a variety of different programming languages which I've taught myself and I've always had the desire to learn and improve on my skill set. Find my CV and portfolio below that I've developed over the years in my free time and at university.</p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">I am a highly motivated, passionate and dedicated games programmer. I graduated at Nottingham Trent University where I studied Games Production BSc achieving first class honours for my final grade. I am currently studying a part time Indie Games Development master’s degree whilst looking for employment as a games programmer in the games industry. I have taught myself C#, Unreal Blueprint and Python in my free time using books, online courses and applications and I have plans to further my skillset by improving fluency in C++ and other programming languages and software. Find my CV and portfolio below that I've developed over the years in my free time and at university.</p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
@@ -51,7 +51,7 @@
         <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://sketchfab.com/conn0">3D Portfolio</a></div>
       </div>
       <div class="row">
-        <div class="col-md-12"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="CRJ.html">Critical Reflective Journal</a></div>
+        <div class="col-md-12"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="CRJ.html">Critical Reflective Journal (MA)</a></div>
       </div>
     </div>
   </div>
