--- a/CRJ.html
+++ b/CRJ.html
@@ -28,7 +28,7 @@
       </div>
       <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">Under Construction for my MA.</p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to the first page of my critical reflective journal, written by Connor Orton as part of Indie Games Development masters degree. My journal will document the progress of my practical work, contextual research and discuss my games development practices as I progress throughout my course. I will also document challenge tasks I have been given on a weekly basis from my course content and evaluate the methodologies I have used to accomplish them alongside stating what I've learned in the process.</p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
