--- a/NatalieSmith/nataliesmith.html
+++ b/NatalieSmith/nataliesmith.html
@@ -10,18 +10,19 @@
   <meta name="keywords" content="Natalie Smith Indie Game Development Portfolio">
   <link rel="stylesheet" href="wireframe.css">
   <link rel="icon" href="assets/FineChapGames/Logo_ZoomedOut_NoBG.png">
+  <link rel="stylesheet" href="../wireframe.css">
 </head>
 
-<body style="	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;" class="mx-0">
+<body style="	background-image: url(../assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;" class="mx-0">
   <nav class="navbar navbar-dark bg-dark p-0">
     <div class="container d-flex justify-content-center"> <a class="navbar-brand" href="index.html">
-        <img src="assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="55" height="55" class="d-inline-block align-top" alt=""><b class="d-inline-flex p-1 text-primary"> Fine Chap Games</b>
+        <img src="../assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="55" height="55" class="d-inline-block align-top" alt=""><b class="d-inline-flex p-1 text-primary"> Fine Chap Games</b>
       </a> </div>
   </nav>
   <div class="mb-4" style="">
     <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border mx-auto mt-2 mb-2" src="assets/Portrait/Natalie_Smith.jpg" height="300" width="300
+        <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border mx-auto mt-2 mb-2" src="Portrait/Natalie_Smith.jpg" height="300" width="300
 400
 50"></div>
       </div>
@@ -45,7 +46,7 @@
           </div>
           <div class="row">
             <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://www.behance.net/Missnataliesmith">Digital Art Portfolio (Behance)</a></div>
-            <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="assets/CV/Natalie Smith CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
+            <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="CV/Natalie Smith CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
             <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="https://www.pinterest.co.uk/natsmith1219"><i class="fa fa-fw fa-pinterest-p"></i>Crafts Portfolio</a></div>
           </div>
         </div>
@@ -78,22 +79,22 @@
       </div>
       <div class="row pb-3">
         <div class="p-3 col-8 mx-auto col-md-6">
-          <h5 class="text-center">Components</h5><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Component_Items_spritesheet.png">
+          <h5 class="text-center">Components</h5><img class="img-fluid d-block mx-auto" src="Portfolio/BOTR Sprites/Component_Items_spritesheet.png">
         </div>
         <div class="p-3 col-8 mx-auto col-md-6">
-          <h5 class="text-center">Consumables - Drink</h5><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Drink_Consumables_spritesheet.png">
+          <h5 class="text-center">Consumables - Drink</h5><img class="img-fluid d-block mx-auto" src="Portfolio/BOTR Sprites/Drink_Consumables_spritesheet.png">
         </div>
         <div class="p-3 col-8 mx-auto col-md-6">
-          <h5 class="text-center">Consumables - Food</h5><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Food_Consumables_spritesheet.png">
+          <h5 class="text-center">Consumables - Food</h5><img class="img-fluid d-block mx-auto" src="Portfolio/BOTR Sprites/Food_Consumables_spritesheet.png">
         </div>
         <div class="p-3 col-8 mx-auto col-md-6">
-          <h5 class="text-center" contenteditable="true">Consumables - Medical</h5><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Medical_Consumables_spritesheet.png">
+          <h5 class="text-center" contenteditable="true">Consumables - Medical</h5><img class="img-fluid d-block mx-auto" src="Portfolio/BOTR Sprites/Medical_Consumables_spritesheet.png">
         </div>
         <div class="p-3 col-8 mx-auto col-md-6">
-          <h5 class="text-center">Ammo</h5><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Ammo_Items_spritesheet.png">
+          <h5 class="text-center">Ammo</h5><img class="img-fluid d-block mx-auto" src="Portfolio/BOTR Sprites/Ammo_Items_spritesheet.png">
         </div>
         <div class="col-8 mx-auto col-md-6 p-3">
-          <h5 class="text-center">Gadgets</h5><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Gadget_Items_spritesheet.png">
+          <h5 class="text-center">Gadgets</h5><img class="img-fluid d-block mx-auto" src="Portfolio/BOTR Sprites/Gadget_Items_spritesheet.png">
         </div>
       </div>
     </div>
@@ -101,7 +102,7 @@
       <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4">
-          <h5 class="text-center">Key Item</h5><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Key_Item_Items_spritesheet.png" width="125
+          <h5 class="text-center">Key Item</h5><img class="img-fluid d-block mx-auto" src="Portfolio/BOTR Sprites/Key_Item_Items_spritesheet.png" width="125
 100">
         </div>
         <div class="col-md-4"></div>
@@ -112,7 +113,7 @@
         </div>
       </div>
       <div class="row pb-3">
-        <div class="mx-auto col-12 col-md-12"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Crafting_Station_spritesheet.png" width="400
+        <div class="mx-auto col-12 col-md-12"> <img class="img-fluid d-block mx-auto" src="Portfolio/BOTR Sprites/Crafting_Station_spritesheet.png" width="400
 500
 500
 
@@ -135,7 +136,7 @@
         </div>
       </div>
       <div class="row pb-3">
-        <div class="col-md-12 mx-auto col-12"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Placeholder_StickMan_spritesheet.png" width="300"> </div>
+        <div class="col-md-12 mx-auto col-12"> <img class="img-fluid d-block mx-auto" src="Portfolio/BOTR Sprites/Placeholder_StickMan_spritesheet.png" width="300"> </div>
       </div>
     </div>
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
@@ -145,10 +146,10 @@
         </div>
       </div>
       <div class="row pb-3">
-        <div class="p-3 col-md-3 col-8 mx-auto"> <img class="img-fluid d-block" src="assets/Portfolio/Natalie/BOTR Sprites/Windows_Hotkeys_spritesheet.png"> </div>
-        <div class="p-3 col-md-3 col-8 mx-auto"> <img class="img-fluid d-block" src="assets/Portfolio/Natalie/BOTR Sprites/Xbox_Hotkeys_spritesheet.png"> </div>
-        <div class="p-3 col-md-3 col-8 mx-auto"> <img class="img-fluid d-block" src="assets/Portfolio/Natalie/BOTR Sprites/Dualshock_Hotkeys_spritesheet.png"> </div>
-        <div class="p-3 col-md-3 col-8 mx-auto"> <img class="img-fluid d-block" src="assets/Portfolio/Natalie/BOTR Sprites/Switch_Hotkeys_spritesheet.png"> </div>
+        <div class="p-3 col-md-3 col-8 mx-auto"> <img class="img-fluid d-block" src="Portfolio/BOTR Sprites/Windows_Hotkeys_spritesheet.png"> </div>
+        <div class="p-3 col-md-3 col-8 mx-auto"> <img class="img-fluid d-block" src="Portfolio/BOTR Sprites/Xbox_Hotkeys_spritesheet.png"> </div>
+        <div class="p-3 col-md-3 col-8 mx-auto"> <img class="img-fluid d-block" src="Portfolio/BOTR Sprites/Dualshock_Hotkeys_spritesheet.png"> </div>
+        <div class="p-3 col-md-3 col-8 mx-auto"> <img class="img-fluid d-block" src="Portfolio/BOTR Sprites/Switch_Hotkeys_spritesheet.png"> </div>
       </div>
     </div>
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
@@ -158,15 +159,15 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-6 col-md-12 mx-auto"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Phone_spritesheet.png"> </div>
+        <div class="col-6 col-md-12 mx-auto"> <img class="img-fluid d-block mx-auto" src="Portfolio/BOTR Sprites/Phone_spritesheet.png"> </div>
       </div>
       <div class="row">
-        <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Category_Icons_spritesheet.png"> </div>
-        <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Sub_Category_Icons_spritesheet.png"> </div>
+        <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto" src="Portfolio/BOTR Sprites/Category_Icons_spritesheet.png"> </div>
+        <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto" src="Portfolio/BOTR Sprites/Sub_Category_Icons_spritesheet.png"> </div>
       </div>
       <div class="row">
-        <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto w-100" src="assets/Portfolio/Natalie/BOTR Sprites/Item_Types_spritesheet.png"> </div>
-        <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Navigation_Icons_spritesheet.png"> </div>
+        <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto w-100" src="Portfolio/BOTR Sprites/Item_Types_spritesheet.png"> </div>
+        <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto" src="Portfolio/BOTR Sprites/Navigation_Icons_spritesheet.png"> </div>
       </div>
       <div class="row">
         <div class="col-md-12 mt-2">
@@ -212,15 +213,15 @@
         </div>
         <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
           <div class="row">
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Adaptive_Foreground_sprite.png" width="200"> </div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Small_Square_sprite.png"> </div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Small_Rounded_sprite.png" width="200"></div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Ball_sprite.png" width="200"></div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Bumper_Unlit_sprite.png" width="200"></div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto my-5" src="assets/Portfolio/Natalie/PPA Sprites/Flipper_Unlit_sprite.png" width="200" height="120
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="Portfolio/PPA Sprites/PPA_Icon_Adaptive_Foreground_sprite.png" width="200"> </div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="Portfolio/PPA Sprites/PPA_Icon_Small_Square_sprite.png"> </div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="Portfolio/PPA Sprites/PPA_Icon_Small_Rounded_sprite.png" width="200"></div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="Portfolio/PPA Sprites/Ball_sprite.png" width="200"></div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="Portfolio/PPA Sprites/Bumper_Unlit_sprite.png" width="200"></div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto my-5" src="Portfolio/PPA Sprites/Flipper_Unlit_sprite.png" width="200" height="120
 200"> </div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Slingshot_Unlit_sprite.png" width="150" height="200"> </div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Plunger_sprite.png" width="100
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto" src="Portfolio/PPA Sprites/Slingshot_Unlit_sprite.png" width="150" height="200"> </div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto" src="Portfolio/PPA Sprites/Plunger_sprite.png" width="100
 125
 
 100
@@ -229,14 +230,14 @@
 50" height="100
 1100
 10"> </div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Speed_Boost_Unlit_sprite.png" width="200"></div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Whirlwind_Spinner_Outer_sprite.png" height="200" width="200"></div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Whirlwind_Spinner_Inner_sprite.png" width="250" height="200"></div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/UI_Pause_Button_Unlit_sprite.png" height="250" width="200"></div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_sprite.png" height="200" width="200"> </div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_Green_sprite.png" height="200" width="200"> </div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_Red_sprite.png" height="200" width="200"> </div>
-            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_Blue_sprite.png" height="200" width="200"></div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="Portfolio/PPA Sprites/Speed_Boost_Unlit_sprite.png" width="200"></div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="Portfolio/PPA Sprites/Whirlwind_Spinner_Outer_sprite.png" height="200" width="200"></div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="Portfolio/PPA Sprites/Whirlwind_Spinner_Inner_sprite.png" width="250" height="200"></div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="Portfolio/PPA Sprites/UI_Pause_Button_Unlit_sprite.png" height="250" width="200"></div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="Portfolio/PPA Sprites/Wormhole_sprite.png" height="200" width="200"> </div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="Portfolio/PPA Sprites/Wormhole_Green_sprite.png" height="200" width="200"> </div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="Portfolio/PPA Sprites/Wormhole_Red_sprite.png" height="200" width="200"> </div>
+            <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="Portfolio/PPA Sprites/Wormhole_Blue_sprite.png" height="200" width="200"></div>
           </div>
           <div class="row">
             <div class="col-md-12 mt-2 px-0">
