--- a/ConnorOrton/MA/CRJ-GDO710.html
+++ b/ConnorOrton/MA/CRJ-GDO710.html
@@ -10,12 +10,13 @@
   <meta name="keywords" content="Connor Orton Indie Game Development Portfolio">
   <link rel="stylesheet" href="wireframe.css">
   <link rel="icon" href="assets/FineChapGames/Logo_ZoomedOut_NoBG.png">
+  <link rel="stylesheet" href="../../wireframe.css">
 </head>
 
-<body style="	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;" class="mx-0">
+<body style="	background-image: url(../../assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;" class="mx-0">
   <nav class="navbar navbar-dark bg-dark p-0">
     <div class="container d-flex justify-content-center"> <a class="navbar-brand" href="index.html">
-        <img src="assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="55" height="55" class="d-inline-block align-top" alt=""><b class="d-inline-flex p-1 text-primary"> Fine Chap Games</b>
+        <img src="../../assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="55" height="55" class="d-inline-block align-top" alt=""><b class="d-inline-flex p-1 text-primary"> Fine Chap Games</b>
       </a> </div>
   </nav>
   <div class="mb-4" style="">
@@ -28,7 +29,7 @@
       </div>
       <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to the first page of my critical reflective journal, written by Connor Orton as part of Indie Games Development masters degree. My journal will document the progress of my practical work, contextual research and discuss my games development practices as I progress throughout my course. I will also document challenge tasks I have been given on a weekly basis from my course content and evaluate the methodologies I have used to accomplish them alongside stating what I've learned in the process.</p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to the first page of my critical reflective journal, written by Connor Orton as part my Indie Games Development master’s degree. My journal will document the progress of my practical work, contextual research and discuss my games development practices as I progress throughout my course. I will document the weekly challenges that I have been given in a critical way, explain how I think that I’ve accomplished the task and evaluate what I’ve learned in the process. This blog is designed for educational purposes, and any outsource material will be referenced correctly to the original source, author or creator at the bottom of each post. </p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
